# exodus

./: .gitignore  CMakeLists.txt  README.md  carbin_deps.txt
ci/: build_deps.sh
cmake/: user_deps.cmake
exodus/: CMakeLists.txt  fake.cc
exodus/cal/: CMakeLists.txt  calc_config.h  calc_interpreter.cc  calc_interpreter.h  calc_main.cc
exodus/hs/: CMakeLists.txt  jupyter.cc  jupyter.h
share/jupyter/kernels/calc/: kernel.json  kernel.json.in
